# Kasasa

./: .gitignore  CONTRIBUTING.md  Kasasa.doap  README.md  System Capture from 2024-11-08 17:30:18.syscap  io.github.kelvinnovais.Kasasa.json  io.github.kelvinnovais.Soslaio.json  meson.build
.github/workflows/: flatpak.yml
data/: io.github.kelvinnovais.Kasasa.desktop  io.github.kelvinnovais.Kasasa.desktop.in  io.github.kelvinnovais.Kasasa.gschema.xml  io.github.kelvinnovais.Kasasa.metainfo.xml.in  io.github.kelvinnovais.Soslaio.desktop  io.github.kelvinnovais.Soslaio.desktop.in  io.github.kelvinnovais.Soslaio.gschema.xml  io.github.kelvinnovais.Soslaio.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  ar.po  de.po  es_ES.po  fr.po  it.po  kasasa.pot  meson.build  nl.po  pt_BR.po  pt_PT.po  ru.po  soslaio.pot  uk.po  vi.po
src/: add-screenshot.c  add-screenshot.h  kasasa-application.c  kasasa-application.h  kasasa-content-container-private.h  kasasa-content-container.c  kasasa-content-container.h  kasasa-content-container.ui  kasasa-content.c  kasasa-content.h  kasasa-picture-container-private.h  kasasa-picture-container.c  kasasa-picture-container.h  kasasa-picture-container.ui  kasasa-preferences.c  kasasa-preferences.h  kasasa-preferences.ui  kasasa-screencast.c  kasasa-screencast.h  kasasa-screenshot.c  kasasa-screenshot.h  kasasa-window-headerbar.ui  kasasa-window-private.h  kasasa-window.c  kasasa-window.h  kasasa-window.ui  kasasa.gresource.xml  main.c  meson.build  retake-screenshot.c  retake-screenshot.h  routines.c  routines.h  screenshot-routines.c  screenshot-routines.h  soslaio-application.c  soslaio-application.h  soslaio-preferences.c  soslaio-preferences.h  soslaio-preferences.ui  (+11 more)
